// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layers - esbuild should create valid stylesheet 1`] = `
"@layer lib;
@layer lib._1sqkzjx1 {
  @media screen and (min-width: 600px) {
    a {
      color: green;
    }
  }
}
@layer lib._1sqkzjx0 {
  a {
    color: red;
    font-weight: 800;
  }
  ._1sqkzjx3 {
    color: blue;
  }
}
@layer lib._1sqkzjx2 {
  ._1sqkzjx4 {
    color: hotpink;
  }
}
"
`;

exports[`layers - mini-css-extract should create valid stylesheet 1`] = `
"@layer lib;
@layer lib._18onbx41 {
  @media screen and (min-width: 600px) {
    a {
      color: green;
    }
  }
}
@layer lib._18onbx40 {
  a {
    color: red;
    font-weight: 800;
  }
  ._18onbx43 {
    color: blue;
  }
}
@layer lib._18onbx42 {
  ._18onbx44 {
    color: hotpink;
  }
}
"
`;

exports[`layers - vite should create valid stylesheet 1`] = `
"@layer lib;
@layer lib._1sqkzjx1 {
  @media screen and (min-width: 600px) {
    a {
      color: green;
    }
  }
}
@layer lib._1sqkzjx0 {
  a {
    color: red;
    font-weight: 800;
  }
  ._1sqkzjx3 {
    color: blue;
  }
}
@layer lib._1sqkzjx2 {
  ._1sqkzjx4 {
    color: hotpink;
  }
}
"
`;
